--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: cookbook-dev
+name: mrms-cookbook-dev
 channels:
   - conda-forge
 dependencies:
@@ -12,9 +12,13 @@ dependencies:
   - numpy
   - s3fs
   - fsspec
-  - zarr
   - cfgrib
   - matplotlib
   - conda
-  - pip:
-    - pelicanfs
+  - ipykernel
+  - conda
+  - nb_conda_kernels
+  - ipywidgets
+  - datetime
+  - cfdatetime
+  - hvplot
