--- a/myst.yml
+++ b/myst.yml
@@ -28,7 +28,7 @@ project:
   copyright: '2025'
   toc:
     - file: README.md
-    - file: '"notebooks/Ch 1_Introduction.ipynb"'
+    - file: notebooks/ch1_Introduction.ipynb
     - file: notebooks/ch2-mar-2023-tornado_jdh.ipynb
     - file: notebooks/ch3_TXfloods.ipynb
     - file: notebooks/bnf-mrms-qpe-hourly.ipynb
